--- a/DreamMirror/DreamMirror/SignUpModuleTest/signUpViewTest.storyboard
+++ b/DreamMirror/DreamMirror/SignUpModuleTest/signUpViewTest.storyboard
@@ -105,6 +105,64 @@
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="101.78571428571428"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="VLZ-vr-1gJ">
+            <objects>
+                <viewController id="TAi-av-qWc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JtP-hn-vCq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="cXZ-O2-Gxr">
+                                <rect key="frame" x="20" y="84" width="374" height="728"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zM8-pW-Pwr">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="137"/>
+                                        <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZCv-ho-a4c">
+                                        <rect key="frame" x="0.0" y="161" width="374" height="366"/>
+                                        <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dyd-JM-Jv6">
+                                        <rect key="frame" x="0.0" y="551" width="374" height="177"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rSn-xD-X6p">
+                                                <rect key="frame" x="0.0" y="0.0" width="177" height="177"/>
+                                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="rSn-xD-X6p" secondAttribute="height" multiplier="1:1" id="z9o-16-mcs"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lrd-vf-Mtj">
+                                                <rect key="frame" x="197" y="0.0" width="177" height="177"/>
+                                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="lrd-vf-Mtj" secondAttribute="height" multiplier="1:1" id="6JQ-7i-IEG"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ZCv-ho-a4c" firstAttribute="height" secondItem="cXZ-O2-Gxr" secondAttribute="height" multiplier="0.502747" id="lDm-Lh-o6S"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bsa-DW-oZy"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Bsa-DW-oZy" firstAttribute="bottom" secondItem="cXZ-O2-Gxr" secondAttribute="bottom" constant="50" id="Rjv-Fn-oXj"/>
+                            <constraint firstItem="cXZ-O2-Gxr" firstAttribute="top" secondItem="Bsa-DW-oZy" secondAttribute="top" constant="40" id="X0r-6J-I2e"/>
+                            <constraint firstItem="Bsa-DW-oZy" firstAttribute="trailing" secondItem="cXZ-O2-Gxr" secondAttribute="trailing" constant="20" id="nYo-d9-dL6"/>
+                            <constraint firstItem="cXZ-O2-Gxr" firstAttribute="leading" secondItem="Bsa-DW-oZy" secondAttribute="leading" constant="20" id="t8F-aH-K0Z"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1lL-xA-bN2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2043" y="102"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="7CP-qY-Vyr">
             <objects>
@@ -127,6 +185,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
