--- a/DreamMirror/DreamMirror/PhotoModule/View/PhotoCollectionViewCell.xib
+++ b/DreamMirror/DreamMirror/PhotoModule/View/PhotoCollectionViewCell.xib
@@ -10,23 +10,23 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoCollectionViewCell" customModule="DreamMirror" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="142" height="167"/>
+            <rect key="frame" x="0.0" y="0.0" width="110" height="148"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="142" height="167"/>
+                <rect key="frame" x="0.0" y="0.0" width="110" height="148"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="STP-Bl-OEP">
-                        <rect key="frame" x="0.0" y="0.0" width="142" height="167"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="STP-Bl-OEP">
+                        <rect key="frame" x="0.0" y="0.0" width="110" height="148"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYO-aT-rhs">
-                                <rect key="frame" x="50.5" y="0.0" width="41.5" height="53"/>
+                                <rect key="frame" x="34.5" y="0.0" width="41.5" height="38"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fF7-aj-gel">
-                                <rect key="frame" x="17" y="59" width="108" height="108"/>
+                                <rect key="frame" x="0.0" y="38" width="110" height="110"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="fF7-aj-gel" secondAttribute="height" multiplier="1:1" id="gvf-sP-SNv"/>
                                 </constraints>
@@ -42,12 +42,12 @@
                 <constraint firstAttribute="trailing" secondItem="STP-Bl-OEP" secondAttribute="trailing" id="AZN-ze-I5k"/>
                 <constraint firstAttribute="bottom" secondItem="STP-Bl-OEP" secondAttribute="bottom" id="gdR-md-68t"/>
             </constraints>
-            <size key="customSize" width="142" height="167"/>
+            <size key="customSize" width="110" height="148"/>
             <connections>
                 <outlet property="dayLabel" destination="GYO-aT-rhs" id="adq-3A-07a"/>
                 <outlet property="photoImageView" destination="fF7-aj-gel" id="46V-66-bGj"/>
             </connections>
-            <point key="canvasLocation" x="201.44927536231884" y="69.977678571428569"/>
+            <point key="canvasLocation" x="176.81159420289856" y="70.3125"/>
         </collectionViewCell>
     </objects>
 </document>
